--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Fizlr</title>
     <meta name="description" content="Fizlr -">
     <meta name="author" content="Fizlr">
+     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" type="text/css" href="css/main.css">
