--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="container">
         <div class="description">
             <div class="logo-container">
-                <img class="logo" src="img/logo.svg" alt="Fizlr">
+                <img class="logo" src="/img/logo.svg" alt="Fizlr">
             </div>
                 A new way to chat, engage and find friends! Coming early 2015!
         
