--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 </head>
 
 <body>
+    <div class="holder">
     <div class="container">
         <div class="description">
             <div class="logo-container">
@@ -28,6 +29,7 @@
         <img class="phonehelper" src="img/promo-front.png" alt="Fizlr">
         
         </div>
+    </div>
     </div>
 </body>
 </html>
