--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" type="text/css" href="css/main.css">
+    <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,900' rel='stylesheet' type='text/css'>
 
 </head>
 
@@ -20,7 +21,7 @@
             <div class="logo-container">
                 <img class="logo" src="/img/logo.svg" alt="Fizlr">
             </div>
-                A new way to chat, engage and find friends! Coming early 2015!
+                <p class="strap">Fizlr A new way to chat, engage and find friends! Coming early 2015!</p>
         
         </div>
         
