--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <img class="logo" src="/img/logo.svg" alt="Fizlr">
             </div>
         <div class="phone-container">
-        <img class="phonehelper" src="img/promo-front.png" alt="Fizlr">
+        <img class="phonehelper" src="/img/promo-front.png" alt="Fizlr">
         
         </div>
         <div class="description">
