--- a/index.html
+++ b/index.html
@@ -24,22 +24,41 @@
                     <div class="header-right">
 <img class="phone-head" src="img/promo-front.png">
                     </div>
-                </div>   
-            </div>
-            <div class="container-shadow"></div>
+            </div>   
+        </div>
+        <div class="container-shadow"></div>
             <div class="video-container">
                 <p class="large-title">Promotional Video Area</p>
-                <br>
-                <div class='embed-container'><iframe src='http://player.vimeo.com/video/22439234' frameborder='0' webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe></div>
+                    <br>
+                        <div class='embed-container'><iframe src='http://player.vimeo.com/video/22439234' frameborder='0' webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+                        </div>
             </div>
         <div class="container-shadow-flip"></div>
-            <div class="banner-1-bg">
-                <div class="banner-container">
-                    <div class="list"><ol>items 1</ol><ol>item2</ol><ol>item 3</ol></div>
+        <div class="feature-scroll-1">
+            <div class="feature-scroll-container">
+                <div class="feature-scroll-content">
+                    <p class="feature-title">Feature 1.</p>
+                    <p class="feature-description"><b>Bold Subtitle.</b><br>Standard description of the feature. have you tried scrolling yet?</p>
                 </div>
             </div>
-        <div class="container-shadow"></div>
+        </div>
+        <div class="feature-scroll-2">
+        <div class="feature-scroll-container">
+                <div class="feature-scroll-content">
+                    <p class="feature-title">Feature 2.</p>
+                    <p class="feature-description"><b>Bold Subtitle.</b><br>Standard description of the feature. have you tried scrolling yet?</p>
+                </div>
+            </div>
+        </div>
             
+        <div class="feature-scroll-3">
+        <div class="feature-scroll-container">
+                <div class="feature-scroll-content">
+                    <p class="feature-title">Feature 3.</p>
+                    <p class="feature-description"><b>Bold Subtitle.</b><br>short description the feature. have you tried scrolling yet?</p>
+                </div>
+            </div>
+        </div>
         
         <p>sfsfsds</p>
     </body>
