--- a/index.html
+++ b/index.html
@@ -37,16 +37,16 @@
         <div class="feature-scroll-1">
             <div class="feature-scroll-container">
                 <div class="feature-scroll-content">
-                    <p class="feature-title">Feature 1.</p>
-                    <p class="feature-description"><b>Bold Subtitle.</b><br>Standard description of the feature. have you tried scrolling yet?</p>
+                    <p class="feature-title">Great Topics</p>
+                    <p class="feature-description"><b>interesting conversation is a must</b><br>Fizlr is full of interesting people to chat to about topics that you really care about.</p>
                 </div>
             </div>
         </div>
         <div class="feature-scroll-2">
         <div class="feature-scroll-container">
                 <div class="feature-scroll-content">
-                    <p class="feature-title">Feature 2.</p>
-                    <p class="feature-description"><b>Bold Subtitle.</b><br>Standard description of the feature. have you tried scrolling yet?</p>
+                    <p class="feature-title">Fun and Snappy</p>
+                    <p class="feature-description"><b>Short Message Fun</b><br>Keep the conversation flowing with short snappy messages that dont drag on.</p>
                 </div>
             </div>
         </div>
@@ -54,13 +54,28 @@
         <div class="feature-scroll-3">
         <div class="feature-scroll-container">
                 <div class="feature-scroll-content">
-                    <p class="feature-title">Feature 3.</p>
-                    <p class="feature-description"><b>Bold Subtitle.</b><br>short description the feature. have you tried scrolling yet?</p>
+                    <p class="feature-title">Found a bore</p>
+                    <p class="feature-description"><b>Dont Waste Time</b><br>Stumbled across someone who doesn't hold your attention? Fizl out and find someone more interesting to chat to.</p>
                 </div>
             </div>
         </div>
-        
-        <p>sfsfsds</p>
+                <div class="container-shadow"></div>
+            <div class="review-container">
+                <p class="large-title">People Love Fizlr</p>
+                    <br>
+                        <p class="review-title">" I just Love Fizlr its made my life amazing "</p>
+                            <p class="review-copy">Fizlr helped me find the love of my life! I had such great conversation with him. Every other chat app on the market takes ages to sift through the people I want. I found that picking an interesting looking Fizl made finding someone new to connect to without the complications of what we looked like worked perfectly.</p>
+                                <div class="spacer"></div>
+                                    <p class="review-title">" I just Love Fizlr its made my life amazing "</p>
+                            <p class="review-copy">Fizlr helped me find the love of my life! I had such great conversation with him. Every other chat app on the market takes ages to sift through the people I want. I found that picking an interesting looking Fizl made finding someone new to connect to without the complications of what we looked like worked perfectly.</p>
+                                <div class="spacer"></div>
+                                    <p class="review-title">" I just Love Fizlr its made my life amazing "</p>
+                            <p class="review-copy">Fizlr helped me find the love of my life! I had such great conversation with him. Every other chat app on the market takes ages to sift through the people I want. I found that picking an interesting looking Fizl made finding someone new to connect to without the complications of what we looked like worked perfectly.</p>
+                                <div class="spacer"></div>
+                                    <p class="review-title">" I just Love Fizlr its made my life amazing "</p>
+                            <p class="review-copy">Fizlr helped me find the love of my life! I had such great conversation with him. Every other chat app on the market takes ages to sift through the people I want. I found that picking an interesting looking Fizl made finding someone new to connect to without the complications of what we looked like worked perfectly.</p>
+                
+                        </div>
     </body>
 </html>
 
