--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
     <link rel="stylesheet" type="text/css" href="css/main.css">
+    <link rel="stylesheet" type="text/css" href="css/gallery.theme.css">
+    <link rel="stylesheet" type="text/css" href="css/gallery.prefixed.css">
     <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,900' rel='stylesheet' type='text/css'>
     </head>
     <body>
