--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <img class="app-store-button" src="img/app-store.svg">
                     </div>
                     <div class="header-right">
-<img class="phone-head" src="img/promo-front.png">
+<img class="phone-head" src="img/promo-front-blk.png">
                     </div>
             </div>   
         </div>
