--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
-    <link rel="stylesheet" type="text/css" href="css/main.css">
+    <link rel='stylesheet' href="/css/main.css" type="text/css" media="all and (min-width: 491px)"/>
+    <link rel='stylesheet' href="/style.css" type="text/css" media="only screen and (max-width: 490px)"/>
     <link rel="stylesheet" type="text/css" href="css/gallery.theme.css">
     <link rel="stylesheet" type="text/css" href="css/gallery.prefixed.css">
     <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,900' rel='stylesheet' type='text/css'>
