--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!doctype html>
-
 <html lang="en">
 <head>
   <meta charset="utf-8">
@@ -11,7 +10,7 @@
 
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
     <link rel='stylesheet' href="/css/main.css" type="text/css" media="all and (min-width: 491px)"/>
-    <link rel='stylesheet' href="/style.css" type="text/css" media="only screen and (max-width: 490px)"/>
+    <link rel='stylesheet' href="/css/main-flow.css" type="text/css" media="only screen and (max-width: 490px)"/>
     <link rel="stylesheet" type="text/css" href="css/gallery.theme.css">
     <link rel="stylesheet" type="text/css" href="css/gallery.prefixed.css">
     <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,900' rel='stylesheet' type='text/css'>
@@ -26,6 +25,9 @@
                     </div>
                     <div class="header-right">
 <img class="phone-head" src="img/promo-front-blk.png">
+                    </div>
+                    <div class="header-alt">
+<img class="phone-alt" src="img/preview-sml.png">
                     </div>
             </div>   
         </div>
