--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
-    <link rel='stylesheet' href="/css/main.css" type="text/css" media="all and (min-width: 491px)"/>
-    <link rel='stylesheet' href="/css/main-flow.css" type="text/css" media="only screen and (max-width: 490px)"/>
+    <link rel='stylesheet' href="/css/main.css" type="text/css" media="all and (min-width: 769px)"/>
+    <link rel='stylesheet' href="/css/main-flow.css" type="text/css" media="only screen and (max-width: 768px)"/>
     <link rel="stylesheet" type="text/css" href="css/gallery.theme.css">
     <link rel="stylesheet" type="text/css" href="css/gallery.prefixed.css">
     <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,900' rel='stylesheet' type='text/css'>
@@ -43,7 +43,7 @@
             <div class="feature-scroll-container">
                 <div class="feature-scroll-content">
                     <p class="feature-title">Great Topics</p>
-                    <p class="feature-description"><b>interesting conversation is a must</b><br>Fizlr is full of interesting people to chat to about topics that you really care about.</p>
+                    <p class="feature-description"><b>interesting conversation is a must</b><br>Fizlr is full of interesting people to chat to about topics that you really&nbsp;care about.</p>
                 </div>
             </div>
         </div>
