--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="header-container">
                 <div class="header-left">
                     <img class="logo-head" src="img/logo.svg">
-                    <p class="header-text">Fizlr A new way to chat, engage and find friends! Coming early 2015!</p>
+                    <p class="header-text">Fizlr sparking the conversation!</p>
                     <img class="app-store-button" src="img/app-store.svg">
                     </div>
                     <div class="header-right">
@@ -31,14 +31,28 @@
                     </div>
             </div>   
         </div>
-        <div class="container-shadow"></div>
+
+<!--
             <div class="video-container">
                 <p class="large-title">Promotional Video Area</p>
                     <br>
                         <div class='embed-container'><iframe src='http://player.vimeo.com/video/22439234' frameborder='0' webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
                         </div>
             </div>
-        <div class="container-shadow-flip"></div>
+-->
+        <div class="about-container">
+                    <div class="about-right">
+                        <p class="title">Sparking Conversation!</p>
+                        <p class="subtitle">Fizlr is a new way to chat, engage and find friends</p>
+                        <div class="spacer"></div>
+                        <br>
+                        <p class="description">Ever become bored talking to the same old people, but don't have time to go into full engaging experiences with someone you meet in the street. Give Fizlr a try!</p>
+                    </div>
+            
+                    <div class="about-left">
+                        <img class="phone-alt" src="img/preview-sml.png">
+                    </div>
+            </div>
         <div class="feature-scroll-1">
             <div class="feature-scroll-container">
                 <div class="feature-scroll-content">
@@ -64,7 +78,6 @@
                 </div>
             </div>
         </div>
-                <div class="container-shadow"></div>
             <div class="review-container">
                 <p class="large-title">People Love Fizlr</p>
                     <br>
