--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="about-container">
                     <div class="about-right">
                         <p class="title">Sparking Conversation!</p>
-                        <p class="subtitle">Fizlr is a new way to chat, engage and find friends</p>
+                        <p class="subtitle">Fizlr is a new way to chat,&nbsp;engage&nbsp;and&nbsp;find&nbsp;friends</p>
                         <div class="spacer"></div>
                         <br>
                         <p class="description">Ever become bored talking to the same old people, but don't have time to go into full engaging experiences with someone you meet in the street. Give Fizlr a try!</p>
