--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
-    <link rel='stylesheet' href="/css/main.css" type="text/css" media="all and (min-width: 769px)"/>
-    <link rel='stylesheet' href="/css/main-flow.css" type="text/css" media="only screen and (max-width: 768px)"/>
+    <link rel='stylesheet' href="/css/main.css" type="text/css" media="all and (min-width: 781px)"/>
+    <link rel='stylesheet' href="/css/main-flow.css" type="text/css" media="only screen and (max-width: 780px)"/>
     <link rel="stylesheet" type="text/css" href="css/gallery.theme.css">
     <link rel="stylesheet" type="text/css" href="css/gallery.prefixed.css">
     <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,900' rel='stylesheet' type='text/css'>
@@ -24,7 +24,7 @@
                     <img class="app-store-button" src="img/app-store.svg">
                     </div>
                     <div class="header-right">
-<img class="phone-head" src="img/promo-front-blk.png">
+<img class="phone-head" src="img/promo-hand.png">
                     </div>
                     <div class="header-alt">
 <img class="phone-alt" src="img/preview-sml.png">
