--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
     <link rel='stylesheet' href="/css/main.css" type="text/css" media="all and (min-width: 769px)"/>
-    <link rel='stylesheet' href="/css/main-flow.css" type="text/css" media="only screen and (max-width: 768px)"/>
+    <link rel='stylesheet' href="/css/main-flow.css" type="text/css" media="only screen and (max-width: 768px) and (orientation : landscape)"/>
     <link rel="stylesheet" type="text/css" href="css/gallery.theme.css">
     <link rel="stylesheet" type="text/css" href="css/gallery.prefixed.css">
     <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,900' rel='stylesheet' type='text/css'>
