--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
     <link rel='stylesheet' href="/css/main.css" type="text/css" media="all and (min-width: 771px)"/>
     <link rel='stylesheet' href="/css/main-flow.css" type="text/css" media="only screen and (max-width: 770px)"/>
-    <link rel='stylesheet' href="/css/main-flow.css" type="text/css" media="only screen and (min-device-width : 768px) and (max-device-width : 1024px)"/>
+    <link rel='stylesheet' href="/css/main-flow.css" type="text/css" media="only screen and (min-width : 768px) and (max-width : 1024px)"/>
                                                                             
     <link rel="stylesheet" type="text/css" href="css/gallery.theme.css">
     <link rel="stylesheet" type="text/css" href="css/gallery.prefixed.css">
