--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <img class="app-store-button" src="img/app-store.svg">
                     </div>
                     <div class="header-right">
-<img class="phone-head" src="img/promo-hand.png">
+<img class="phone-head" src="img/promo-hand-long.png">
                     </div>
                     <div class="header-alt">
 <img class="phone-alt" src="img/preview-sml.png">
@@ -101,7 +101,7 @@
                             <input id="txt" type="text" placeholder="First Name" name="First Name" required><br>
                             <input id="txt" type="text" placeholder="Last Name" name="Last Name"><br>
                             <input id="mail" type="email" placeholder="fluffy@fox.com" name="_replyto" required><br>
-        <input id="sign" type="submit" value="Sign Up!">
+        <input class="sign" type="submit" value="Sign Up!">
                             <input type="text" name="_gotcha" style="display:none" />
                             <input type="hidden" name="_subject" value="New Fizlr Beta Submission!" />
                             <input type="hidden" name="_next" value="//fizlr.net/cheers.html" />
