--- a/index.html
+++ b/index.html
@@ -130,14 +130,20 @@
             <div class="nav">
                 <div class="nav-container">
                     <div class="footer-logo">
-                    <img class="ftlogo" src="img/logo.svg">
+                    <img class="ftlogo" src="img/logo-dot.svg">
                     </div>
                     <p class="nav-text">
-                    <a class="footlnk" href="/about">Test</a>
+                    <a class="footlnk" href="/about.html">About Fizlr</a>
                     </p>
-                    <p class="nav-text">Privacy Policy</p>
-                    <p class="nav-text">Contact Us</p>
-                    <p class="nav-text">Press Kit</p>
+                    <p class="nav-text">
+                    <a class="footlnk" href="/faq.html">FAQ's</a>
+                    </p>
+                    <p class="nav-text">
+                    <a class="footlnk" href="/press.html">Press Kit</a>
+                    </p>
+                    <p class="nav-text">
+                    <a class="footlnk" href="/privacy.html">Privacy Policy</a>
+                    </p>
                 
                 </div>
         </div>
