--- a/index.html
+++ b/index.html
@@ -21,8 +21,11 @@
                 <div class="header-left">
                     <img class="logo-head" src="img/icon.svg">
                     <p class="logo-text">Fizlr</p>
-                    <p class="header-text">Sparking the conversation!</p>
+                    <p class="header-text">Interesting Matters!</p>
                         <div class="spacer-white"></div>
+                    <div class="header-alt">
+<img class="phone-alt" src="img/preview-sml.png">
+                    </div>
                     <p id="beta-intro">Get involved &amp; secure Your Username before launch!</p>
                         <a href="#beta">
                             <div class="betabutton">
@@ -36,9 +39,6 @@
                     <div class="header-right">
 <img class="phone-head" src="img/promo-hand-long.png">
                     </div>
-                    <div class="header-alt">
-<img class="phone-alt" src="img/preview-sml.png">
-                    </div>
             </div>   
         </div>
 <!--
@@ -50,13 +50,10 @@
             </div>
 -->
         <div class="about-bg-1">
-            <div class="floating-icon">
-                
-            </div>
                 <div class="about-container">
                     <div class="about-right">
-                        <p class="title">Sparking Conversation!</p>
-                        <p class="subtitle">Fizlr is a new way to chat,&nbsp;engage&nbsp;and&nbsp;find&nbsp;friends</p>
+                        <p class="title">Interesting Matters!</p>
+                        <p class="subtitle">Fizlr is a new way to chat, engage&nbsp;and&nbsp;find&nbsp;friends</p>
                         <div class="spacer"></div>
                         <br>
                         <p class="description">Ever become bored talking to the same old people, but don't have time to go into full engaging experiences with someone you meet in the street. Give Fizlr a try!</p>
@@ -149,7 +146,3 @@
         </div>
     </body>
 </html>
-
-<!--note past 495 px wide the design starts to reduce in quality -->
-
-<!--note i need to outline the text on the logo svg as its trying to load the font on the phone etc. DUR STUPID -->
