--- a/index.html
+++ b/index.html
@@ -65,12 +65,10 @@
                 </div>
         </div>
         <div class="feature-scroll">
-            <div class="feature-scroll-overlay">
-            </div>
             <div class="feature-scroll-container">
                 <div class="feature-scroll-content">
                     <p class="feature-title">Not Hooked on&nbsp;Looks</p>
-                    <p class="feature-description"><b>Its what you say not what you look like that matters</b><br>Fizlr hides your appearence under our pxl engine, unlocking your profile picture as you chat with a user.</p>
+                    <p class="feature-description"><b>Words speak louder than profile pictures</b><br>Fizlr hides your appearence under our pxl engine, unlocking your photo as you chat away.</p>
                 </div>
             </div>
         </div>
