--- a/mobile/privacy.html
+++ b/mobile/privacy.html
@@ -20,7 +20,7 @@
     </div>
     
     <div class="title">
-        <p class="title-text">Terms &amp; Conditions</p>
+        <p class="title-text">Privacy Policy</p>
     </div>
     
     <div class="copy">
