Updated mobile terms

--- a/mobile/privacy.html
+++ b/mobile/privacy.html
@@ -94,7 +94,9 @@ To protect your privacy and security, we take reasonable steps to verify your id
         <p class="copy-text">
         <b>Company Contact Information:</b></p>
         <p class="copy-text">
-        Please contact Company with any questions or comments about this Privacy Policy, your personal information, our third party disclosure practices, or your consent choices by email: privacy@fizlr.com.</p>
+			Please contact Company with any questions or comments about this Privacy Policy, your personal information, our third party disclosure practices, or your consent choices by email: <a href="mailto:privacy@fizlr.com">privacy@fizlr.com.</a></p>
+		
+		<p class="base-link"><a href="http://fizlr.net/mobile/terms.html">Read the Terms &amp; Conditions ></a></p>
     </div>
 </body>
     
