--- a/mobile/terms.html
+++ b/mobile/terms.html
@@ -44,6 +44,8 @@ Bespoke organic Helvetica, meditation pour-over dreamcatcher Carles. Tofu Tumblr
 XOXO master cleanse hashtag vegan craft beer, authentic YOLO mustache tilde four loko hella lumbersexual PBR&amp;B. Scenester hoodie street art fashion axe Banksy hella bespoke American Apparel, artisan typewriter messenger bag narwhal bicycle rights quinoa salvia. Twee lumbersexual master cleanse, artisan irony flexitarian whatever fap Marfa four loko mustache. 3 wolf moon meggings locavore, mixtape lumbersexual organic chillwave fanny pack tote bag selfies forage aesthetic. Selvage before they sold out photo booth McSweeney's Blue Bottle Neutra. Whatever sartorial retro chillwave chia Banksy, Odd Future cold-pressed. Banksy you probably haven't heard of them migas, PBR&amp;B dreamcatcher Austin four dollar toast chambray stumptown.</p>
         <p class="copy-text">
 Dreamcatcher +1 banjo pop-up organic, kitsch keffiyeh heirloom sartorial. Fingerstache street art VHS vegan, meh slow-carb church-key pug irony squid 8-bit locavore PBR. Wayfarers craft beer meggings, viral listicle lomo letterpress kale chips bicycle rights lo-fi normcore taxidermy PBR&amp;B Echo Park. Bicycle rights fingerstache typewriter, quinoa before they sold out butcher migas art party mumblecore kogi chia Thundercats. Wolf master cleanse cronut skateboard, small batch butcher cold-pressed kogi 8-bit tattooed Echo Park organic flexitarian Marfa occupy. Carles selvage typewriter try-hard, Etsy 8-bit vegan occupy Blue Bottle. 90's gluten-free kitsch street art fingerstache Austin.</p>
+		
+		<p class="base-link"><a href="http://fizlr.net/mobile/privacy.html">Read the Privacy Policy ></a></p>
     </div>
 </body>
     
